ctfSecure/log/iptables.log
# Generated by iptables-save v1.6.1 on Fri Dec 10 08:42:22 2021
*filter
:INPUT DROP [0:0]
:FORWARD DROP [331:24300]
:OUTPUT DROP [0:0]
:TCP-LIMIT - [0:0]
-A INPUT -i eth3 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 10.1.5.2/32 -j ACCEPT
-A INPUT -s 10.1.1.2/32 -j ACCEPT
-A FORWARD -s 10.1.1.2/32 -d 10.1.5.2/32 -i eth1 -o eth4 -p tcp -m tcp --dport 80 --tcp-flags FIN,SYN,RST,PSH,ACK,URG SYN -m conntrack --ctstate NEW -j TCP-LIMIT
-A FORWARD -s 10.1.2.2/32 -d 10.1.5.2/32 -i eth1 -o eth4 -p tcp -m tcp --dport 80 --tcp-flags FIN,SYN,RST,PSH,ACK,URG SYN -m conntrack --ctstate NEW -j TCP-LIMIT
-A FORWARD -s 10.1.3.2/32 -d 10.1.5.2/32 -i eth1 -o eth4 -p tcp -m tcp --dport 80 --tcp-flags FIN,SYN,RST,PSH,ACK,URG SYN -m conntrack --ctstate NEW -j TCP-LIMIT
-A FORWARD -s 10.1.4.2/32 -d 10.1.5.2/32 -i eth1 -o eth4 -p tcp -m tcp --dport 80 --tcp-flags FIN,SYN,RST,PSH,ACK,URG SYN -m conntrack --ctstate NEW -j TCP-LIMIT
-A FORWARD -s 10.1.2.2/32 -d 10.1.5.2/32 -i eth1 -o eth4 -p tcp -m tcp --dport 80 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A FORWARD -s 10.1.3.2/32 -d 10.1.5.2/32 -i eth1 -o eth4 -p tcp -m tcp --dport 80 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A FORWARD -s 10.1.4.2/32 -d 10.1.5.2/32 -i eth1 -o eth4 -p tcp -m tcp --dport 80 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A FORWARD -s 10.1.1.2/32 -d 10.1.5.2/32 -i eth1 -o eth4 -p tcp -m tcp --dport 80 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A FORWARD -s 10.1.5.2/32 -d 10.1.2.2/32 -i eth4 -o eth1 -p tcp -m tcp --sport 80 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A FORWARD -s 10.1.5.2/32 -d 10.1.3.2/32 -i eth4 -o eth1 -p tcp -m tcp --sport 80 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A FORWARD -s 10.1.5.2/32 -d 10.1.4.2/32 -i eth4 -o eth1 -p tcp -m tcp --sport 80 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A FORWARD -s 10.1.5.2/32 -d 10.1.1.2/32 -i eth4 -o eth1 -p tcp -m tcp --sport 80 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -o eth3 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -d 10.1.5.2/32 -j ACCEPT
-A OUTPUT -d 10.1.1.2/32 -j ACCEPT
-A TCP-LIMIT -p tcp -m tcp ! --tcp-option 2 -m tcpmss ! --mss 1460 -j DROP
-A TCP-LIMIT -p tcp -m tcp ! --tcp-option 4 -j DROP
-A TCP-LIMIT -p tcp -m tcp ! --tcp-option 8 -j DROP
-A TCP-LIMIT -p tcp -m tcp ! --tcp-option 1 -j DROP
-A TCP-LIMIT -p tcp -m tcp ! --tcp-option 3 -j DROP
-A TCP-LIMIT -m hashlimit --hashlimit-upto 20/sec --hashlimit-burst 40 --hashlimit-mode srcip --hashlimit-name tcp_rate_limit -j ACCEPT
-A TCP-LIMIT -m limit --limit 3/min -j LOG --log-prefix "DROPPED TCP IP-Tables connect"
-A TCP-LIMIT -j DROP
COMMIT
# Completed on Fri Dec 10 08:42:22 2021
